--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityTest"></activity>
+        <activity android:name=".ActivityRelativeLayout"></activity>
+        <activity android:name=".ActivityTest" />
         <activity android:name=".ActivityPractice" />
         <activity android:name=".ActivityLearn" />
         <activity android:name=".MainActivity">
